--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
     "mysql2": "^2.2.5",
+    "say": "^0.16.0",
     "sequelize": "^6.3.5",
     "timer-node": "^5.0.7",
     "tiny-timer": "^1.6.0"
